--- a/pract8/pract8.vcxproj.filters
+++ b/pract8/pract8.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="pract8.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="pract8_1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
